# 1History

./: .dir-locals.el  .gitignore  CHANGELOG.org  Cargo.toml  Makefile  README.org  release-arm64.sh  rust-toolchain.toml
.github/workflows/: CI.yml  admin.yml  crates.yml  release.yml
src/: backup.rs  database.rs  export.rs  main.rs  progress.rs  source.rs  types.rs  util.rs  web.rs
static/: details.html  index.html
static/css/: nav.css
static/js/: echarts.js  main.js
